# XSounder

./: .gitignore  CMakeLists.txt  README.md  XSound.podspec  build_clean.sh
Resources/: README.md  jieqian.pcm
coresound/: XALPlayer.cpp  XALPlayer.h  XAudioPlayer.cpp  XAudioPlayer.h  XException.h  XLogger.h  XProducable.cpp  XProducable.h  XSounder.cpp  XSounder.h
coresound/Android/: XAndroidSounder.cpp  XAndroidSounder.h  XAndroidSounderAL.cpp  XAndroidSounderAL.h  XCoreSoundJNI.cpp  XCoreSoundJNI.h  XSoundJNI.cpp  XSoundJNI.h
coresound/iOS/: XAVAudioSession+RouteUtils.h  XAVAudioSession+RouteUtils.m  XELAudioSession.h  XELAudioSession.m  XIosSounder.h  XIosSounder.mm  XIosSounderAL.h  XIosSounderAL.mm  XIosSounderDevice.h  XIosSounderDevice.m  XWeakProxy.h  XWeakProxy.m
examples/Android/XSound/: settings.gradle
examples/Android/XSound/app/: build.gradle
examples/Android/XSound/app/src/main/: AndroidManifest.xml
examples/Android/XSound/app/src/main/res/layout/: activity_main.xml  (+1 more)
examples/Android/XSound/coresound/: build.gradle
examples/Android/XSound/coresound/src/main/: AndroidManifest.xml
examples/Android/XSound/gradle/wrapper/: gradle-wrapper.properties
examples/iOS/XRender/: Podfile
examples/iOS/XRender/XRender/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  ViewController.h  ViewController.m  main.m
examples/iOS/XRender/XRender.xcodeproj/: project.pbxproj
examples/iOS/XRender/XRender.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/iOS/XRender/XRender.xcodeproj/project.xcworkspace/xcuserdata/andy.xcuserdatad/: UserInterfaceState.xcuserstate
examples/iOS/XRender/XRender.xcodeproj/xcshareddata/xcschemes/: XRender.xcscheme
examples/iOS/XRender/XRender/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
examples/iOS/XSound/: Podfile
examples/iOS/XSound/XSound/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  ViewController.h  ViewController.m  main.m
examples/iOS/XSound/XSound.xcodeproj/: project.pbxproj
examples/iOS/XSound/XSound.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/iOS/XSound/XSound/Base.lproj/: Main.storyboard
(+12 files in other folders)
